--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -86,14 +86,17 @@
                     </div>
 
                     <div class="project-card">
-                        <div class="project-text">
-                            <h2 class="fw-bolder">Project Name 2</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero, iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
-                        </div>
-                        <div class="project-image-wrapper">
-                            <img src="https://dummyimage.com/300x400/343a40/6c757d" alt="Project 2" class="project-image" />
-                        </div>
-                    </div>
+    <div class="project-text">
+        <a href="poder-mentira.html" style="text-decoration: none; color: inherit;">
+            <h2 class="fw-bolder">La política del engaño</h2>
+            <p>¿Puede sobrevivir la democracia cuando la desinformación se convierte en una experiencia emocional más poderosa que la verdad?</p>
+        </a>
+    </div>
+    <div class="project-image-wrapper">
+        <img src="assets/trump.jpg" alt="La política del engaño portada" class="project-image" />
+    </div>
+</div>
+
 
                 </div>
             </div>
