--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -133,43 +133,48 @@
                         <div class="pb-5"></div>
                         <!-- Skills Section-->
                         <!-- Skills Section-->
+<!-- Skills Section -->
 <section>
-    <!-- Skillset Card-->
-    <div class="card shadow border-0 rounded-4 mb-5">
-        <div class="card-body p-5">
-            <!-- Professional skills list-->
-            <div class="mb-5">
-                <div class="d-flex align-items-center mb-4">
-                    <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-                        <i class="bi bi-stars"></i>
-                    </div>
-                    <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Skills</span></h3>
-                </div>
-                <div class="row row-cols-1 row-cols-md-3 mb-4">
-                    <div class="col mb-4 mb-md-0">
-                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Pensamiento crítico</div>
-                    </div>
-                    <div class="col mb-4 mb-md-0">
-                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Redacción periodística</div>
-                    </div>
-                    <div class="col">
-                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Narrativa analítica</div>
-                    </div>
-                </div>
-                <div class="row row-cols-1 row-cols-md-3">
-                    <div class="col mb-4 mb-md-0">
-                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Creatividad discursiva</div>
-                    </div>
-                    <div class="col mb-4 mb-md-0">
-                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Comunicación interpersonal</div>
-                    </div>
-                    <div class="col">
-                        <div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Adaptabilidad digital</div>
-                    </div>
-                </div>
-            </div>
+  <!-- Skillset Card -->
+  <div class="card shadow border-0 rounded-4 mb-5">
+    <div class="card-body p-5">
+      <!-- Título de la sección con ícono -->
+      <div class="d-flex align-items-center mb-4">
+        <div class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
+          <i class="bi bi-stars"></i>
         </div>
+        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Skills</span></h3>
+      </div>
+
+      <!-- Grupo 1: Comunicación y pensamiento -->
+      <h5 class="fw-bold mt-4">🧩 Comunicación y pensamiento</h5>
+      <ul class="list-unstyled row row-cols-1 row-cols-md-2 g-3">
+        <li class="col"><div class="skill-card">Pensamiento crítico</div></li>
+        <li class="col"><div class="skill-card">Redacción periodística</div></li>
+        <li class="col"><div class="skill-card">Narrativa analítica</div></li>
+        <li class="col"><div class="skill-card">Creatividad discursiva</div></li>
+        <li class="col"><div class="skill-card">Comunicación interpersonal</div></li>
+      </ul>
+
+      <!-- Grupo 2: Entorno digital -->
+      <h5 class="fw-bold mt-4">💻 Entorno digital y herramientas</h5>
+      <ul class="list-unstyled row row-cols-1 row-cols-md-2 g-3">
+        <li class="col"><div class="skill-card">Adaptabilidad digital</div></li>
+        <li class="col"><div class="skill-card">Alfabetización mediática</div></li>
+        <li class="col"><div class="skill-card">Manejo básico de HTML y CSS</div></li>
+        <li class="col"><div class="skill-card">Optimización de contenidos (SEO)</div></li>
+      </ul>
+
+      <!-- Grupo 3: Formación y sensibilidad -->
+      <h5 class="fw-bold mt-4">🌱 Formación y sensibilidad</h5>
+      <ul class="list-unstyled row row-cols-1 row-cols-md-2 g-3">
+        <li class="col"><div class="skill-card">Curso de nutrición y salud</div></li>
+        <li class="col"><div class="skill-card">Curso de arte y estética visual</div></li>
+        <li class="col"><div class="skill-card">Atención al detalle (hostelería)</div></li>
+        <li class="col"><div class="skill-card">Gestión de tiempo bajo presión</div></li>
+      </ul>
     </div>
+  </div>
 </section>
                     </div>
                 </div>
