--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -86,17 +86,28 @@
                     </div>
 
                     <div class="project-card">
-    <div class="project-text">
-        <a href="poder-mentira.html" style="text-decoration: none; color: inherit;">
-            <h2 class="fw-bolder">La política del engaño</h2>
-            <p>¿Puede sobrevivir la democracia cuando la desinformación se convierte en una experiencia emocional más poderosa que la verdad?</p>
-        </a>
-    </div>
-    <div class="project-image-wrapper">
-        <img src="assets/trump.jpg" alt="La política del engaño portada" class="project-image" />
-    </div>
-</div>
+                        <div class="project-text">
+                            <a href="poder-mentira.html" style="text-decoration: none; color: inherit;">
+                                <h2 class="fw-bolder">La política del engaño</h2>
+                                <p>¿Puede sobrevivir la democracia cuando la desinformación se convierte en una experiencia emocional más poderosa que la verdad?</p>
+                            </a>
+                        </div>
+                        <div class="project-image-wrapper">
+                            <img src="assets/trump.jpg" alt="La política del engaño portada" class="project-image" />
+                        </div>
+                    </div>
 
+                    <div class="project-card">
+                        <div class="project-text">
+                            <a href="salomon.html" style="text-decoration: none; color: inherit;">
+                                <h2 class="fw-bolder">La abnegación más pura: maternidad</h2>
+                                <p>Es difícil recorrer los pasillos del Thyssen sin detenerse a ver esta dramática escena...</p>
+                            </a>
+                        </div>
+                        <div class="project-image-wrapper">
+                            <img src="assets/portada-salo.jpg" alt="La abnegación más pura portada" class="project-image" />
+                        </div>
+                    </div>
 
                 </div>
             </div>
@@ -119,9 +130,9 @@
             <div class="col-auto"><div class="small m-0">Copyright © Rick 2025</div></div>
             <div class="col-auto">
                 <a class="small" href="#">Privacidad</a>
-                <span class="mx-1">&middot;</span>
+                <span class="mx-1">·</span>
                 <a class="small" href="#">Términos</a>
-                <span class="mx-1">&middot;</span>
+                <span class="mx-1">·</span>
                 <a class="small" href="#">Contacto</a>
             </div>
         </div>
