Update and rename startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/proyectos-html/arte-naturaleza.html to startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/arte-naturaleza.html
@@ -74,7 +74,7 @@
     <section class="py-5">
         <div class="container px-5 custom-article">
             <h1 class="fw-bolder mb-4"><span class="gradient-title">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</span></h1>
-            <img src="assets/img-proyectos/portadaarte.jpg" alt="Portada de la exposición" class="obra" style="max-width: 100%; display: block; margin-left: auto; margin-right: auto;" />
+            <img src="assets/portadaarte.jpg" alt="Portada de la exposición" class="obra" style="max-width: 100%; display: block; margin-left: auto; margin-right: auto;" />
             <p class="lead fw-bold fst-italic">
                 Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”. A través de obras de grandes artistas como Pablo Picasso, Salvador Dalí o Charles Le Corbusier, la muestra invita a reflexionar sobre cómo la naturaleza ha inspirado a los artistas a lo largo de un siglo.
             </p>
@@ -84,23 +84,23 @@
             <p>Los cuatro conceptos mencionados anteriormente hacen referencia al estado de la naturaleza, lo que genera que la exposición tenga diferentes fases. Al iniciar, nos encontraremos en metamorfosis en donde se difumina la línea entre las formas antropomorfas, zoomorfas o vegetales para abrirse a nuevas posibilidades más creativas.</p>
             <p>En este apartado, encontramos obras como <em>Femme au chapeau</em> de Pablo Picasso (1935), en donde vemos a una mujer con un rostro distorsionado, símbolo de cambio y transformación, característico de la metamorfosis de la naturaleza.</p>
             <div class="obra-lateral">
-                <img src="assets/img-proyectos/arte-1.jpg" alt="Le Palais aux rochers de fenêtres" class="obra" />
+                <img src="assets/arte-1.jpg" alt="Le Palais aux rochers de fenêtres" class="obra" />
             </div>
             <p>Además, encontramos obras como <em>Le Palais aux rochers de fenêtres</em> de Yves Tanguy (1942), en donde vemos una obra dividida en dos: en la parte superior, un cielo orgánico, natural, tranquilo; mientras que en la parte inferior la relación entre lo mecánico y lo geológico, lo natural y lo inerte. La metamorfosis está presente en el paisaje, como este ha sido transformado por la modernidad y como las montañas pasan a ser una mezcla entre lo salvaje y lo humanamente creado.</p>
             <p>Posteriormente, pasamos al apartado de mimetismo, donde la naturaleza, en sus diversas formas, se convierte en una fuente de inspiración para los artistas, quienes reproducen sus formas, texturas y movimientos.</p>
             <div class="obra-lateral">
-                <img src="assets/img-proyectos/arte-2.jpg" alt="Cielo azul" class="obra" />
+                <img src="assets/arte-2.jpg" alt="Cielo azul" class="obra" />
             </div>
             <p>Encontramos obras como <em>Cielo azul</em> del padre del arte abstracto, Kandinski. En esta obra, vemos extrañas formas biomórficas que flotan sobre un fondo azul celeste, no se puede identificar exactamente qué son, pero, sin duda alguna, podemos ver la intención del autor: expresar emociones y crear una experiencia sensorial a través de su pintura. Las formas en <em>Cielo azul</em> son una mezcla de biomorfos, formas abstractas que parecen tener alguna referencia orgánica, podría decirse que son aves o criaturas marinas, aunque es imposible determinarlo. El objetivo de Kandinski es crear una sensación de movimiento y ligereza, como si estas formas flotaran en el aire.</p>
             <p>Tras haber visto dos secciones ecuatoriales, homogéneas, más dedicadas al desarrollo de la naturaleza; pasamos a dos que son los polos: creación y amenaza.</p>
             <p>En creación, observamos la imaginación del pintor moderno en su clímax, los artistas se convierten en dioses, juegan con su experiencia y con la naturaleza, crean nuevas formas exquisitas para la vista.</p>
             <div class="obra-lateral">
-                <img src="assets/img-proyectos/arte-3.jpg" alt="Breed" class="obra" />
+                <img src="assets/arte-3.jpg" alt="Breed" class="obra" />
             </div>
             <p>Así, encontramos por ejemplo <em>Breed</em> de Richard Deacon (1989), un enrevesado engendramiento hecho a base de madera y masonita estratificados, aluminio, resina epoxi y pigmentos. La obra tiene una apariencia rígida, metálica, pero móvil, libre, fluida. Es una representación de la nueva creación, del nuevo uso de la naturaleza a merced del hombre, del sometimiento de la naturaleza al imaginativo humano, el cual es infinito. Ya lo veríamos con Degas y su geometría para mostrar el movimiento.</p>
             <p>Finalizando, encontramos amenaza, la sección más fiel a la realidad y la más profunda. Se trata de representar la desgracia traída por el ser humano y su eco en la naturaleza. Como usamos algo tan bello, tan vivo, para actos tan muertos. Esta sección juega más con otros elementos externos al arte plástico: vemos una sala a la que entramos con gafas 3D, donde continuamente se reproduce un vídeo de aves volando en bandada, desesperadas. Transmite una energía sombría. Probablemente el mensaje no esté establecido ni esté claro, pero algo se puede inferir: las creaciones humanas (como las gafas tridimensionales), son causantes de las desgracias naturales. Así lo observamos en todas las obras del pasaje.</p>
             <div class="obra-lateral">
-                <img src="assets/img-proyectos/arte-4.jpg" alt="Pollution-Cultivation-Nouvelle Écologie" class="obra" />
+                <img src="assets/arte-4.jpg" alt="Pollution-Cultivation-Nouvelle Écologie" class="obra" />
             </div>
             <p>En esta sección, encontramos también <em>Pollution-Cultivation-Nouvelle Écologie</em> de Tetsumi Kudo (1971), en donde observamos diferentes tipos de plantas que contienen circuitos electrónicos en su raíz. Es la representación de la humanidad en decadencia, de la naturaleza contaminada. Según palabras del autor, el “antagonismo primitivo” del ser humano contra la naturaleza. Véase como una crítica a la sobreproducción tecnológica y al continuo avance de esta, como las nuevas formas de ecologismo y conservación. No se puede ser ecológico mediante la tecnología, puesto que esta es contraria a esta, desde la raíz.</p>
             <p>Casi al finalizar la exposición, nos chocamos con <em>Skin Pool (Gleen)</em> de Pamela Rosenkranz (1979), una gran piscina que contenía un líquido de un color beige, rosa, cremoso, sobre esto, el comentario que se mostraba al público decía “<em>Skin Pool</em> contiene un extraño líquido de un color entre rosa y beis, que recuerda al tono de una piel supuestamente blanca, tal y como aparece idealizada en la publicidad. (…) La artista cuestiona el modo en que la industria cosmética interfiere en nuestra relación con el cuerpo.” Es así como Rosenkranz usa el arte como una crítica social y humana. Su obra refleja cómo el ser humano crea modelos que únicamente corrompen tanto el valor más humano del hombre, como el poder bello y transformador de la naturaleza para algo tan lóbrego.</p>
