Update and rename startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/proyectos-html/poder-mentira.html to startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/poder-mentira.html
@@ -104,7 +104,7 @@
 
     <section class="py-5">
         <div class="container px-5 custom-article">
-            <h1 class="fw-bolder mb-4"><span class="gradient-title">Pieza 1. Reportaje: La política del engaño</span></h1>
+            <h1 class="fw-bolder mb-4"><span class="gradient-title">La política del engaño</span></h1>
             <img src="assets/trump.jpg" alt="Imagen de Donald Trump" class="obra" style="max-width: 100%; display: block; margin-left: auto; margin-right: auto;" />
             
             <p class="lead fw-bold fst-italic">
