--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -75,36 +75,36 @@
 
                     <div class="project-card">
                         <div class="project-text">
-                            <a href="proyectos-html/arte-naturaleza.html" style="text-decoration: none; color: inherit;">
+                            <a href="arte-naturaleza.html" style="text-decoration: none; color: inherit;">
                                 <h2 class="fw-bolder">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</h2>
                                 <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”...</p>
                             </a>
                         </div>
                         <div class="project-image-wrapper">
-                            <img src="assets/img-proyectos/portadaarte.jpg" alt="Arte y naturaleza portada" class="project-image" />
+                            <img src="assets/portadaarte.jpg" alt="Arte y naturaleza portada" class="project-image" />
                         </div>
                     </div>
 
                     <div class="project-card">
     <div class="project-text">
-        <a href="proyectos-html/poder-mentira.html" style="text-decoration: none; color: inherit;">
+        <a href="poder-mentira.html" style="text-decoration: none; color: inherit;">
             <h2 class="fw-bolder">La política del engaño</h2>
             <p>¿Puede sobrevivir la democracia cuando la desinformación se convierte en una experiencia emocional más poderosa que la verdad?</p>
         </a>
     </div>
     <div class="project-image-wrapper">
-        <img src="assets/img-proyectos/trump.jpg" alt="La política del engaño portada" class="project-image" />
+        <img src="assets/trump.jpg" alt="La política del engaño portada" class="project-image" />
     </div>
 </div>
                     <div class="project-card">
     <div class="project-text">
-        <a href="proyectos-html/salomon.html" style="text-decoration: none; color: inherit;">
+        <a href="salomon.html" style="text-decoration: none; color: inherit;">
             <h2 class="fw-bolder">La abnegación más pura: la maternidad</h2>
             <p>Es difícil recorrer los pasillos del Thyssen sin detenerse a ver esta dramática escena...</p>
         </a>
     </div>
     <div class="project-image-wrapper">
-        <img src="assets/img-proyectos/portada-salo.jpg" alt="El juicio de Salomón" class="project-image" />
+        <img src="assets/portada-salo.jpg" alt="El juicio de Salomón" class="project-image" />
     </div>
 </div>
 
