--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -16,6 +16,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     </head>
     <body class="d-flex flex-column h-100">
         <main class="flex-shrink-0">
@@ -194,6 +195,40 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Sección de Proyectos destacados con animación -->
+<section class="py-5">
+    <div class="container px-5 mb-5">
+        <div class="text-center mb-5" data-aos="fade-up">
+            <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Proyectos destacados</span></h1>
+        </div>
+
+        <!-- Proyecto 1 -->
+        <div class="row align-items-center mb-5" data-aos="fade-up" data-aos-delay="100" style="background-color: white; border-radius: 1rem; box-shadow: 0 0 20px rgba(0,0,0,0.07); padding: 2rem;">
+            <div class="col-md-6">
+                <img src="assets/portadaarte.jpg" alt="Arte y naturaleza portada" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6 mt-4 mt-md-0">
+                <h2 class="fw-bold">Del surrealismo a la crisis ecológica</h2>
+                <p class="mb-3">Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”. Este proyecto analiza cómo el arte ha dialogado con la ecología a lo largo del tiempo.</p>
+                <a href="arte-naturaleza.html" class="btn btn-outline-primary">Leer más</a>
+            </div>
+        </div>
+
+        <!-- Proyecto 2 -->
+        <div class="row align-items-center flex-md-row-reverse mb-5" data-aos="fade-up" data-aos-delay="200" style="background-color: white; border-radius: 1rem; box-shadow: 0 0 20px rgba(0,0,0,0.07); padding: 2rem;">
+            <div class="col-md-6">
+                <img src="assets/trump.jpg" alt="La política del engaño portada" class="img-fluid rounded">
+            </div>
+            <div class="col-md-6 mt-4 mt-md-0">
+                <h2 class="fw-bold">La política del engaño</h2>
+                <p class="mb-3">¿Puede sobrevivir la democracia cuando la desinformación se convierte en una experiencia emocional más poderosa que la verdad? Este artículo explora la manipulación política moderna con Trump como figura clave.</p>
+                <a href="poder-mentira.html" class="btn btn-outline-primary">Leer más</a>
+            </div>
+        </div>
+    </div>
+</section>
+
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
@@ -214,5 +249,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
     </body>
 </html>
