--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/salomon.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/salomon.html
@@ -220,5 +220,42 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    // Detecta el modo del sistema
+    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
+    const userTheme = localStorage.getItem('theme');
+
+    if (userTheme) {
+        document.documentElement.setAttribute('data-theme', userTheme);
+    } else if (prefersDark) {
+        document.documentElement.setAttribute('data-theme', 'dark');
+    }
+
+    // Botón para cambiar el tema
+    function toggleTheme() {
+        const currentTheme = document.documentElement.getAttribute('data-theme');
+        const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
+        document.documentElement.setAttribute('data-theme', newTheme);
+        localStorage.setItem('theme', newTheme);
+        updateIcon(newTheme);
+    }
+
+    function updateIcon(theme) {
+        const icon = document.getElementById('theme-icon');
+        if (icon) icon.textContent = theme === 'dark' ? '☀️' : '🌙';
+    }
+
+    document.addEventListener('DOMContentLoaded', () => {
+        const button = document.getElementById('theme-toggle');
+        if (button) {
+            button.addEventListener('click', toggleTheme);
+            updateIcon(document.documentElement.getAttribute('data-theme'));
+        }
+    });
+</script>
+    <button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
+    <span id="theme-icon">🌙</span>
+</button>
+
 </body>
 </html>
