--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -197,36 +197,49 @@
             </section>
 
             <!-- Sección de Proyectos destacados con animación -->
-<section class="py-5">
-    <div class="container px-5 mb-5">
-        <div class="text-center mb-5" data-aos="fade-up">
-            <h1 class="display-5 fw-bolder mb-0"><span class="text-gradient d-inline">Proyectos destacados</span></h1>
-        </div>
+<!-- Sección carrusel de proyectos -->
+<section class="py-5 bg-light">
+  <div class="container px-5">
+    <div class="text-center mb-5" data-aos="fade-up">
+      <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">Mis proyectos</span></h2>
+    </div>
 
+    <div class="position-relative">
+      <div class="d-flex overflow-auto gap-4 pb-3" style="scroll-snap-type: x mandatory;" id="carousel-container">
+        
         <!-- Proyecto 1 -->
-        <div class="row align-items-center mb-5" data-aos="fade-up" data-aos-delay="100" style="background-color: white; border-radius: 1rem; box-shadow: 0 0 20px rgba(0,0,0,0.07); padding: 2rem;">
-            <div class="col-md-6">
-                <img src="assets/portadaarte.jpg" alt="Arte y naturaleza portada" class="img-fluid rounded">
-            </div>
-            <div class="col-md-6 mt-4 mt-md-0">
-                <h2 class="fw-bold">Del surrealismo a la crisis ecológica</h2>
-                <p class="mb-3">Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”. Este proyecto analiza cómo el arte ha dialogado con la ecología a lo largo del tiempo.</p>
-                <a href="arte-naturaleza.html" class="btn btn-outline-primary">Leer más</a>
-            </div>
+        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
+          <img src="assets/portadaarte.jpg" class="card-img-top" alt="Arte y naturaleza">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">Arte y naturaleza</h5>
+            <p class="card-text">Diálogo entre surrealismo y crisis ecológica. Un paseo por la biomorfología del siglo XX.</p>
+            <a href="arte-naturaleza.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+          </div>
         </div>
 
         <!-- Proyecto 2 -->
-        <div class="row align-items-center flex-md-row-reverse mb-5" data-aos="fade-up" data-aos-delay="200" style="background-color: white; border-radius: 1rem; box-shadow: 0 0 20px rgba(0,0,0,0.07); padding: 2rem;">
-            <div class="col-md-6">
-                <img src="assets/trump.jpg" alt="La política del engaño portada" class="img-fluid rounded">
-            </div>
-            <div class="col-md-6 mt-4 mt-md-0">
-                <h2 class="fw-bold">La política del engaño</h2>
-                <p class="mb-3">¿Puede sobrevivir la democracia cuando la desinformación se convierte en una experiencia emocional más poderosa que la verdad? Este artículo explora la manipulación política moderna con Trump como figura clave.</p>
-                <a href="poder-mentira.html" class="btn btn-outline-primary">Leer más</a>
-            </div>
+        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
+          <img src="assets/trump.jpg" class="card-img-top" alt="La política del engaño">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">La política del engaño</h5>
+            <p class="card-text">La desinformación como estrategia emocional en la política moderna.</p>
+            <a href="poder-mentira.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+          </div>
         </div>
+
+        <!-- Proyecto 3 -->
+        <div class="card flex-shrink-0" style="width: 20rem; scroll-snap-align: start;">
+          <img src="assets/portada-salo.jpg" class="card-img-top" alt="La maternidad en el arte">
+          <div class="card-body">
+            <h5 class="card-title fw-bold">La maternidad en el arte</h5>
+            <p class="card-text">Interpretación crítica del juicio de Salomón desde lo humano y lo ético.</p>
+            <a href="salomon.html" class="btn btn-warning text-white fw-bold">Leer más</a>
+          </div>
+        </div>
+
+      </div>
     </div>
+  </div>
 </section>
 
         </main>
